<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#FFFFFF"
    tools:context=".ContactActivity">


    <EditText
        android:id="@+id/txtUbicationName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtUbicacion"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date|text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lugarFecha"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFecha">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="2.5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:backgroundTint="#ADF30202"
            android:text="@string/cancelarE"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="#901FF44A"
            android:text="@string/guardarE"
            android:textColor="#D6373333" />
    </LinearLayout>

    <Spinner
        android:id="@+id/ddcontacto"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_dropdown"
        android:backgroundTint="#938BD100"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:visibility="visible" />


    <Spinner
        android:id="@+id/ddTipoEvent"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_dropdown"
        android:backgroundTint="#DF007FD4"
        android:foregroundTint="#FFFFFFFF"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoEvento" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/nombre_del_evento"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/ubicacion"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUbicationName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/contactos"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUbicacion" />

    <TextView
        android:id="@+id/tipoEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tipo_de_evento"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ddcontacto" />

    <TextView
        android:id="@+id/lugarFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lugar_y_fecha"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ddTipoEvent" />


</androidx.constraintlayout.widget.ConstraintLayout>